# rezero2d

./: .gitignore  CMakeLists.txt  LICENSE
example/: CMakeLists.txt  example.cc
src/: CMakeLists.txt  rezero2d.h
src/rezero2d/: bitmap.cc  bitmap.h  canvas.cc  canvas.h  codec.cc  codec.h  data.cc  data.h  edge_builder.cc  edge_builder.h  format.cc  format.h  geometry.cc  geometry.h  linearizer.cc  linearizer.h  path.cc  path.h
src/rezero2d/base/: api.cc  api.h  logging.cc  logging.h  macros.h
src/rezero2d/codec/: bmp_codec.cc  bmp_codec.h
src/rezero2d/raster/: edge_builder.cc  edge_builder.h  edge_builder_impl.h  edge_source.cc  edge_source.h  edge_storage.cc  edge_storage.h  flatten_utils.cc  flatten_utils.h
src/rezero2d/utils/: int_operations.h
